Fixed styling on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -58,7 +58,7 @@ main {
 }
 
 @media (max-width: 800px) {
-    #chat-container {
+    .container {
         width: 100%;
         margin-left: 0;
         margin-right: 0;
